# esp32simpledrone

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  FICHIERS_SUPPRIMES.md  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  controller.c  controller.h  flight_controller.c  flight_controller.h  idf_component.yml  main.c  main.h  motor.c  motor.h  pid.c  pid.h  stabilization.c  stabilization.h
